Add operational and fiscal message to HTML

--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -1509,6 +1509,28 @@ $("#btnConfirmarCobro").onclick = async () => {
           border-top-color:#0c6cbd;border-radius:50%;width:70px;height:70px;margin-bottom:16px;">
         </div>
         <div>GENERANDO TICKET<br>FAVOR DE ESPERAR...</div>
+
+<!-- 🔥 MENSAJE OPERATIVO Y FISCAL -->
+<div style="
+  margin-top:18px;
+  font-size:18px;
+  font-weight:700;
+  color:#ffd700;
+  text-align:center;
+  text-shadow:0 0 5px rgba(0,0,0,0.6);
+">
+  ⚠️ RECUERDA PREGUNTARLE AL CLIENTE:<br>
+  <span style="font-size:17px; color:#fff;">
+    • ¿REQUIERE FACTURA?<br>
+    • ¿PROPORCIONAR DATOS FISCALES?<br>
+  </span>
+  <br>
+  <span style="font-size:18px; color:#9eff9e;">
+    Y NO OLVIDES: EL SALUDO "BUENOS DÍAS" Y LAS "GRACIAS BUEN DIA" AL FINALIZAR 🙌
+  </span>
+</div>
+
+        
       </div>
       <style>@keyframes spin{to{transform:rotate(360deg);}}</style>
     `;
