--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -1600,7 +1600,22 @@ $("#btnConfirmarCobro").onclick = async () => {
       autorizado_por: descuentoAutorizado > 0 ? "Gerente autorizado" : null,
       ubicacion: await obtenerUbicacionRobusta().catch(() => null),
       detalle: carrito.map(it => {
-        const dep = departamentos[it.departamento_id] || { id: 0, nombre: "SIN DEP", iva: 0, ieps: 0 };
+        // 🛠 FIX: validación segura del departamento
+let depId = it.departamento_id;
+
+// Si viene vacío, null, undefined o string raro → reparar
+if (!depId || depId === "null" || depId === "undefined" || depId.trim() === "") {
+  depId = catalogo.find(x => x.id === it.id)?.departamento_id || null;
+}
+
+// Tomar departamento FINAL (si existe)
+const dep = departamentos[depId] || {
+  id: "0",
+  nombre: "SIN DEP",
+  iva: 0,
+  ieps: 0
+};
+
 return {
   id: it.id,
   nombre: it.nombre,
