--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -140,6 +140,9 @@ header,#loginScreen,.btn,#modalCobro,#qrReaderContainer{display:none!important}
   z-index: 99999 !important;
   position: absolute !important;
 }
+#carrito-container {
+  bottom: -25px !important;  /* baja el carrito */
+}
 
 </style>
 </head>
