--- a/SIFEI/FACTURACIONTICKETS.html
+++ b/SIFEI/FACTURACIONTICKETS.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <title>FACTURACIÓN – PROVSOFT</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
 <link rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap">
 
@@ -263,3 +263,4 @@ document.getElementById("btnCliente").addEventListener("click", () => {
 
 </body>
 </html>
+
